# retirement-calculator

./: Dockerfile  README.md  build.gradle  hot_reload.sh  settings.gradle
backend-js/: app.js  build.gradle  package-lock.json  package.json
backend-js/src/main/kotlin/express/: Application.kt  ExpressRouter.kt  JSONUtils.kt
backend-jvm/: build.gradle
backend-jvm/src/main/resources/: test.conf
calculator/: BUILD.bazel  WORKSPACE  bazel-bin  bazel-common  bazel-genfiles  bazel-out  bazel-testlogs  build.gradle
calculator/src/main/kotlin/com/wadejensen/retirement/: Calculator.kt  IncomeTax.kt  InvestmentStrategy.kt  LedgerRow.kt  Main.java  Main.kt  MaximumSuper.kt  Super.kt
calculator/src/main/kotlin/com/wadejensen/retirement/securities/: InvestmentGains.kt
calculator/src/main/kotlin/com/wadejensen/retirement/tax/data/: SuperContribution.kt  SuperTaxPayable.kt
calculator/src/main/kotlin/com/wadejensen/retirement/validation/: ConcessionalCapExceededWarning.kt  SuperContributionCapExceededError.kt  ValidationError.kt
calculator/src/test/kotlin/com/wadejensen/retirement/: CalculatorTest.kt  SuperTest.kt
calculator/src/test/kotlin/com/wadejensen/retirement/tax/: IncomeTaxTest.kt
common-js/: build.gradle  package-lock.json
common-jvm/: build.gradle
fp/: README.md  build.gradle
fp/src/test/kotlin/org.funktionale/: DisjunctionTest.kt  EitherTest.kt  OptionTest.kt
frontend-js/: .gitignore  build.gradle  package-lock.json  package.json
frontend-js/src/main/web/: atlas.min.js  index.html  index0.html  index1.html
(+103 files in other folders)
